# python-sample-vscode-flask-tutorial

./: .gitlab-ci.yml  azure-pipelines-1.yml  azure-pipelines.yml  pyproject.toml  requirements.in  requirements.txt
.circleci/: config.yml
.github/workflows/: docker-image.yml  package.json  python-app.yml  terraform-destroy.yml  terraform.yml
terraform/: main.tf
