[project]
name            = "sample-flask-app"
version         = "0.1.0"
requires-python = ">=3.10"
dependencies    = [
    "requests==2.32.3"
]

# ---------- uv-specific settings ----------
[[tool.uv.index]]
name = "cloudsmith"                                   # any slug you like
url  = "https://dl.cloudsmith.io/basic/globex-innovations/acme-nonprod/python/simple/"
publish-url = "https://api.cloudsmith.io/python/globex-innovations/acme-nonprod/"

